      a package to a sibling of a parent branch has been fixed. (CNY-2108)
    * A problem resulting in derived packages corrupting files with the
      same content was fixed. (CNY-2157)
    * A bug that caused internal server errors when retrieving
      changeset that contained compressed file data over 4 GiB in size
      has been fixed. (CNY-2170, CNY-2173)

Changes in 1.2.4:
  o Bug Fixes:
    * A file that was mistakenly ommitted from packaging has been
      added to the build. (CNY-2155)

Changes in 1.2.3:
  o Build Changes:
    * The addSvnSnapshot() source action now has the ability to add
      specific SVN revisions via the 'revision' argument. (CNY-2156)
  o Bug Fixes:
    * An update failure that would occur when two versions of a package
      have been installed, one local, one from a repository, has been
      fixed. (CNY-2127)
    * A regression introduced in 1.2.1 affecting patch files that apply
      multiple changes to the same file has been fixed. (CNY-2142)
    * Group scripts now have file descriptor 0 (stdin) connected to
      /dev/null. Previously, stdin was closed, a potential problem
      for scripts that open file descriptors and then disconnect from
      the terminal. (CNY-2143)

  o Client Changes:
    * Added listkeys, addkey, and getkey commands to cvc for basic
      command line PGP key management. (CNY-2150)

Changes in 1.2.2:
  o Build Changes:
    * Python and Ruby dependencies with lib-specific flags now cause
      the package to be architecture-flavored. (CNY-2110)
    * Groups using setSearchPath now prefer packages on the labels and
      troves listed explicitly in the searchPath over other labels,
      even if the label is specified in the add() command. For example,
      if your searchPath includes foo=conary.rpath.com@rpl:1/1-1-1, then
      r.add('foo', 'conary.rpath.com@rpl:1') in a group recipe will now
      find version 1-1-1 over later versions. Before, it would find the