@@ -23,6 +23,8 @@ Changes in @NEW@:
     * A bug that caused internal server errors when retrieving
       changeset that contained compressed file data over 4 GiB in size
       has been fixed. (CNY-2170, CNY-2173)
+    * HTTP error codes generated by HTTP proxies are now properly
+      interpreted by Conary clients. (CNY-2181)
 
 Changes in 1.2.4:
   o Bug Fixes:
